--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,8 @@
   .post .post-photo-wrapper img {
     display: block;
     margin: auto;
-    height: 200px;
-    width: 200px; }
+    height: 100%;
+    width: 100%; }
 
 .col-centered {
   float: none;
